--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ body {
 	vertical-align: middle;
 	margin-right: 25px;
 }
-@media (max-height: 1200px) {
+@media (max-width: 1200px) {
 	.slide-1 {
 		background-size: cover;
 		.card-3 {
@@ -301,13 +301,13 @@ body {
 	}
 	}
 }
-@media (max-height: 576px) {
+@media (max-width: 992px) {
 	.slider-nav {
 		display: none;
 
 	}
 }
-@media (max-height: 576px) {
+@media (max-width: 576px) {
 	.slide-title {
 		font-size: 36px;
 		line-height: 1.4;
